Time: 17 ms (92.78%), Space: 57.2 MB (23.89%) - LeetHub